examples/errors/type_error_assign.ik
fn main():
    let a = 1
    a = "foo"
